# Chome

./: CMakeLists.txt  README.md  library.h
ACMT/: CMakeLists.txt
ACMT/1/: CMakeLists.txt
FOA/: CMakeLists.txt  booknote.md
FOA/algorithm/: CMakeLists.txt  binarysearch.c  exchangesort.c  matrixmult.c  seqsearch.c  sum.c
Luogu/: CMakeLists.txt  P1000.c  luogutest.c  p1001.c  p1002.c
knowledgebase/: EffectiveCwithGrok2.md  LLMCPLNote.md  computingsystem.md  cplnote.md  effectiveC.md  gpt.md  stdlib.md  theory.md  位运算.md
objects/: CMakeLists.txt  kexue.c  pow.c  scanf.c
ojnu/: CMakeLists.txt  te0.c
ojnu/23exam1/: CMakeLists.txt
ojnu/23exam2/: CMakeLists.txt
ojnu/24101/: CMakeLists.txt  ascii.c  change.c  equation.c  gas.c  io1.c  io2.c  io3.c  julian.c  pi-2.c  sensor.c
ojnu/24exam1/: CMakeLists.txt
ojnu/4loops/: CMakeLists.txt  bit.c  guess.c  mines01.c  statistics.c
ojnu/7-pointers-arrays/: BigTitle.c  CMakeLists.txt  interpreter.c  substr.c
ojnu/8pointers/: CMakeLists.txt  csgo.c  tokenizer.c
ojnu/CLASS/: CMakeLists.txt
ojnu/CLASS/1 io/: circle.c  infosys.c  mol.c  scanfinfo.c  sphere.c
ojnu/CLASS/3-for-while/: CMakeLists.txt  binary-search.c  digits.c  palindrome.c  prime.c  selection-sort.c  stars.c
ojnu/CLASS/4-loops/: CMakeLists.txt  game-of-life.c  insertion-sort.c  merge.c  t0.c
ojnu/CLASS/if-for-array/: CMakeLists.txt  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
ojnu/CLASS/pointers/: CMakeLists.txt  pointers.c
ojnu/OJNote/: 1-types-io.md
ojnu/datatype/: CMakeLists.txt  buddy.c  idiot.h  wine.c
ojnu/forawhile/: CMakeLists.txt
ojnu/function/: CMakeLists.txt  absolute-prime.c  next-permutation.c  radix.c  sum.c
ojnu/if02/: CMakeLists.txt  blackhole.c  converter-1.c  factorial.c  farm.c  single.c  standup.c  ts.c
ojnu/if02/no/: CMakeLists.txt  Inverse.c  rank.c
ojwx/: CMakeLists.txt  home.c  test.c
ojwx/10/: 1.c  10.c  11.c  12.c  13.c  15.c  16.c  17.c  18.c  2.c  20.c  21.c  23.c  24.c  28.c  3.c  30.c  31.c  32.c  34.c  4.c  6.c  7.c  8.c  9.c  CMakeLists.txt
ojwx/101/: CMakeLists.txt  home1.c
ojwx/11/: 1.c  14.c  2.c  4.c  CMakeLists.txt
ojwx/12/: 12a.c  12b.c  12c.c  12d.c  12e.c  CMakeLists.txt
ojwx/2/: 210.c  22.c  23.c  24.c  25.c  26.c  27.c  29.c  CMakeLists.txt
ojwx/3/: 31.c  32.c  CMakeLists.txt
ojwx/4/: 4.9.c  411.c  412.c  46.c  CMakeLists.txt  atoA.c
ojwx/5/: 52.c  CMakeLists.txt
ojwx/6/: CMakeLists.txt
ojwx/7/: 12.c  13.c  15.c  16.c  17.c  18.c  19.c  20.c  21.c  6.c  8.c  9.c  CMakeLists.txt  c.bat
ojwx/8/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  26.c  27.c  28.c  29.c  3.c  4.c  7.c  8.c  9.c  CMakeLists.txt
ojwx/9/: 1.c  2.c  3.c  4.c  CMakeLists.txt
ojwx/experiment/: CMakeLists.txt  ee21.c  ee22.c  ee23.c  exptest.c
