cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_subdirectory(CLASS)
add_subdirectory(24101)
add_subdirectory(if02)
add_subdirectory(forawhile)
add_subdirectory(datatype)
add_subdirectory(function)
add_subdirectory(4loops)
add_subdirectory(7-pointers-arrays)
add_subdirectory(8pointers)
add_subdirectory(23exam1)
add_subdirectory(24exam1)
add_subdirectory(23exam2)
add_executable(te0 te0.c)
target_link_libraries(te0 m)