cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_subdirectory(2)
add_subdirectory(3)
add_subdirectory(4)
add_subdirectory(5)
add_subdirectory(6)
add_subdirectory(7)
add_subdirectory(8)
add_subdirectory(9)
add_subdirectory(10)
add_subdirectory(11)
add_subdirectory(12)
add_executable(test test.c)
add_executable(home home.c)
target_link_libraries(test m)
add_subdirectory(101)