cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(ascii ascii.c)
add_executable(change change.c)
add_executable(pi-2 pi-2.c)
add_executable(sensor sensor.c)
add_executable(julian julian.c)
add_executable(gas gas.c)
add_executable(io2 io2.c)
add_executable(io3 io3.c)
add_executable(equation equation.c)
add_executable(io io1.c)
target_link_libraries(pi-2 m)
target_link_libraries(gas m)
target_link_libraries(sensor m)
target_link_libraries(equation m)