cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(be behaviors.c)
add_executable(bit bit.c)
add_executable(gu guess.c)
add_executable(ma magic-square.c)
add_executable(mat match.c)
add_executable(matr matrix.c)
add_executable(min mines01.c)
add_executable(su sudoku.c)
add_executable(equation2 equation-2.c)
add_executable(formation formation.c)
add_executable(life life.c)
add_executable(obstacle obstacle.c)
add_executable(seer seer.c)
add_executable(softmax softmax.c)
add_executable(statistics statistics.c)
add_executable(trace trace.c)