cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_subdirectory(if-for-array)
add_subdirectory(3-for-while)
add_subdirectory(5funct)
add_subdirectory(pointers)
add_executable(circle "1 io/circle.c")
add_executable(sphere "1 io/sphere.c")
add_executable(mol "1 io/mol.c")
add_executable(infosys "1 io/infosys.c")
add_executable(scaffolding "1 io/scanfinfo.c")
target_link_libraries(sphere m)
target_link_libraries(mol m)
target_link_libraries(infosys m)
