cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(brackets brackets.c)
add_executable(buddy buddy.c)
add_executable(counting counting.c)
add_executable(mines-2 mines-2.c)
add_executable(whac-a-mole whac-a-mole.c)
add_executable(wine wine.c)
add_executable(stack stact.c)
add_executable(queue queue.c)
add_executable(rotate rotate.c)
add_executable(cuboid cuboid.c)