cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(b-ternary-1 b-ternary-1.c)
add_executable(b-ternary-2 b-ternary-2.c)
add_executable(bubbleSortwrong bubble-sortWrong.c)
add_executable(josephus josephus.c)
add_executable(calculator calculator.c)
add_executable(calendar calendar.c)
add_executable(decimal decimal.c)
add_executable(gcdd gcd.c)
add_executable(multiplication-table multiplication-table.c)
add_executable(palind palindrome-2new.c)
add_executable(quick-sort quick-sort.c)