cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(absolute absolute-prime.c)
add_executable(con converter-2.c)
add_executable(next next-permutation.c)
add_executable(pair pair.c)
add_executable(radix radix.c)
add_executable(sum sum.c)
add_executable(natcn natcn.c)
add_executable(matrix-func matrix-func.c)
add_executable(sudoku-func sudoku-func.c)