cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(farm farm.c)
add_executable(blackhole blackhole.c)
add_executable(converter converter-1.c)
add_executable(standup standup.c)
add_executable(single single.c)
add_executable(factorial factorial.c)
add_executable(ts ts.c)
add_subdirectory(no)
target_link_libraries(farm m)
target_link_libraries(standup m)