cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(001 1.c)
add_executable(002 2.c)
add_executable(003 3.c)
add_executable(004 4.c)
add_executable(005 5.c)
add_executable(006 6.c)
add_executable(007 7.c)
add_executable(008 8.c)
add_executable(009 9.c)
add_executable(0010 10.c)
add_executable(0011 11.c)
add_executable(0012 12.c)
add_executable(0013 13.c)
add_executable(0014 14.c)
add_executable(0015 15.c)
add_executable(0016 16.c)
add_executable(0017 17.c)
add_executable(0018 18.c)
add_executable(0019 19.c)
add_executable(0020 20.c)
add_executable(0021 21.c)
add_executable(0022 22.c)
add_executable(0023 23.c)
add_executable(0024 24.c)
add_executable(0025 25.c)
add_executable(0026 26.c)
add_executable(0027 27.c)
add_executable(0028 28.c)
add_executable(0029 29.c)
add_executable(0030 30.c)
add_executable(0031 31.c)
add_executable(0032 32.c)
add_executable(0033 33.c)
add_executable(0034 34.c)
