cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(111 1.c)
add_executable(112 2.c)
add_executable(113 3.c)
add_executable(114 4.c)
add_executable(115 5.c)
add_executable(116 6.c)
add_executable(117 7.c)
add_executable(118 8.c)
add_executable(119 9.c)
add_executable(1110 10.c)
add_executable(1111 11.c)
add_executable(1112 12.c)
add_executable(1113 13.c)
add_executable(1114 14.c)
