cmake_minimum_required(VERSION 3.29.6)
project(cpl)
add_executable(24 24.c)
add_executable(25 25.c)
add_executable(27 27.c)
add_executable(28 28.c)
add_executable(29 29.c)
add_executable(210 210.c)
add_executable(211 211.c)
add_executable(212 212.c)
add_executable(23 23.c)
add_executable(26 26.c)
add_executable(22 22.c)
target_link_libraries(24 m)