cmake_minimum_required(VERSION 3.29.6)
project(cpl)

# 创建可执行文件
add_executable(71 1.c)
add_executable(72 2.c)
add_executable(73 3.c)
add_executable(74 4.c)
add_executable(75 5.c)
add_executable(76666 6.c)
add_executable(77 7.c)
add_executable(78 8.c)
add_executable(79 9.c)
add_executable(710 10.c)
add_executable(711 11.c)
add_executable(712 12.c)
add_executable(713 13.c)
add_executable(714 14.c)
add_executable(715 15.c)
add_executable(716 16.c)
add_executable(717 17.c)
add_executable(718 18.c)
add_executable(719 19.c)
add_executable(720 20.c)
add_executable(721 21.c)