cmake_minimum_required(VERSION 3.29.6)
project(cpl)

add_executable(81 1.c)
add_executable(82 2.c)
add_executable(83 3.c)
add_executable(84 4.c)
add_executable(85 5.c)
add_executable(86 6.c)
add_executable(87 7.c)
add_executable(88 8.c)
add_executable(89 9.c)
add_executable(810 10.c)
add_executable(811 11.c)
add_executable(812 12.c)
add_executable(813 13.c)
add_executable(814 14.c)
add_executable(815 15.c)
add_executable(816 16.c)
add_executable(817 17.c)
add_executable(818 18.c)
add_executable(819 19.c)
add_executable(820 20.c)
add_executable(821 21.c)
add_executable(822 22.c)
add_executable(823 23.c)
add_executable(824 24.c)
add_executable(825 25.c)
add_executable(826 26.c)
add_executable(827 27.c)
add_executable(828 28.c)
add_executable(829 29.c)
add_executable(830 30.c)